--- a/style.css
+++ b/style.css
@@ -1,127 +1,116 @@
 /* Title of the Role */
 
-
-
-
 /* Title */
-body{
- background-color: rgb(250, 250, 250);
- padding: 2rem 2rem;
+body {
+  background-color: rgb(250, 250, 250);
+  padding: 2rem 2rem;
 }
 h1 {
-    font-family: inter;
-    font-style: bold;
-    font-size: 2rem;
-    color: indigo;
-    margin:0;
+  font-family: inter;
+  font-style: bold;
+  font-size: 2rem;
+  color: indigo;
+  margin: 0;
 }
 .translated {
-    font-style: normal;
+  font-style: normal;
 
-    font-size: 1.6rem;
-    color: rgba(47, 0, 85, 0.15);
-
+  font-size: 1.6rem;
+  color: rgba(47, 0, 85, 0.15);
 }
 h2 {
-    font-family: inter;
-    font-style: normal;
-    font-size: 1.5rem;
-    color: indigo;
-    margin:0;
+  font-family: inter;
+  font-style: normal;
+  font-size: 1.5rem;
+  color: indigo;
+  margin: 0;
 }
 
 h3 {
-    font-family: inter;
-    font-style: normal;
-    font-size: 1.1rem;
-    color: rgb(28, 0, 48);
-    margin: 0;
+  font-family: inter;
+  font-style: normal;
+  font-size: 1.1rem;
+  color: rgb(28, 0, 48);
+  margin: 0;
 }
 
 h4 {
-    font-family: inter;
-    font-weight: normal;
-    font-size: 0.8rem;
-    color: rgb(28, 0, 48);
-    margin: 0;
-    font-style: small-caps;
+  font-family: inter;
+  font-weight: normal;
+  font-size: 0.8rem;
+  color: rgb(28, 0, 48);
+  margin: 0;
+  font-style: small-caps;
 }
-.separator{
-    color: #E5E7EB;
+.separator {
+  color: #e5e7eb;
 }
 .industryType {
-    font-variant: small-caps;
+  font-variant: small-caps;
 }
 
 .subTitle {
-    font-variant: small-caps;
+  font-variant: small-caps;
 }
 
 div {
-    display: flex;
-    align-items: flex-start;
-    padding: 0 0 1rem;
-    flex-direction: column;
-    gap: 0.4rem;
+  display: flex;
+  align-items: flex-start;
+  padding: 0 0 1rem;
+  flex-direction: column;
+  gap: 0.4rem;
 }
-.flexing{
-    display: flex;
-    flex-direction: row;
-}
-
-.keyProduct{
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-    padding: 0.1rem 0.2rem 0;
-    border-radius: 0.25rem;
-    font-variant: small-caps;
-    font-size: 0.7rem;
-    font-weight: bold;
-    
-}
-.tags{
-    
-    color: rgb(240, 240, 240);
-    background-color: rgb(37, 37, 37);
-    padding: 0.2rem 0.4rem 0;
-    border-radius: 0.25rem;
-    font-variant: normal;
-    font-size: 0.7rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: normal;
+.flexing {
+  display: flex;
+  flex-direction: row;
 }
 
-p{
-    font-family: inter;
-    font-size: 1.1rem;
-    margin: 0;
+.keyProduct {
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+  padding: 0.1rem 0.2rem 0;
+  border-radius: 0.25rem;
+  font-variant: small-caps;
+  font-size: 0.7rem;
+  font-weight: bold;
+}
+.tags {
+  color: rgb(240, 240, 240);
+  background-color: rgb(37, 37, 37);
+  padding: 0.2rem 0.4rem 0;
+  border-radius: 0.25rem;
+  font-variant: normal;
+  font-size: 0.7rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
 }
 
-.space{
-    
-    display: flex;
-    flex-flow: wrap;
-    gap: 0.5rem;
-    justify-content: flex-start;
-    padding: 1rem;
+p {
+  font-family: inter;
+  font-size: 1.1rem;
+  margin: 0;
 }
 
-li{
-    font-family: inter;
-    padding: 0.3rem;
-    font-size: 1rem;
-    list-style: disc;
-    
+.space {
+  display: flex;
+  flex-flow: wrap;
+  gap: 0.5rem;
+  justify-content: flex-start;
+  padding: 1rem;
 }
 
-.jobDescription{
-    
-    
-    border-width: 0.2rem;
-    border-left: 4px solid black;
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-    
-    
-    padding: 2rem;
+li {
+  font-family: inter;
+  padding: 0.3rem;
+  font-size: 1rem;
+  list-style: disc;
+}
+
+.jobDescription {
+  border-width: 0.2rem;
+  border-left: 4px solid black;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+
+  padding: 2rem;
 }
