--- a/style.css
+++ b/style.css
@@ -1,12 +1,45 @@
-/* Title of the Role */
-
-/* Title */
-body {
-  background-color: rgb(250, 250, 250);
-  padding: 2rem 2rem;
-}
-h1 {
+/* Global selectors */
+* {
+  background-color: rgba(250, 250, 250, 0.806);
   font-family: inter;
+  margin: 0;
+  padding: 0;
+
+  /* box-sizing: border-box; Asegura que el ancho y alto incluya el padding y border */
+}
+
+/* Body selector */
+body {
+  padding: 3.5rem 3.5rem;
+  /* Preservar para colores de bg/surface mas adelante */
+  /* background-color: #1f1f1f;
+  background-color: #515151; */
+}
+/* Use it as a tool to map the box model */
+.ruler-p {
+  /* Padding Rule */
+  border: purple;
+
+  background-color: rgba(255, 0, 0, 0.079);
+  background-image: radial-gradient(
+    circle,
+    rgb(255, 0, 247) 1px,
+    transparent 1px
+  );
+  background-size: 10px 10px;
+  background-origin: padding-box; /* Aplica el fondo solo desde el borde del padding */
+}
+
+/**/
+
+a {
+  color: indigo;
+
+  /* text-decoration: 0.15rem underline;
+  text-underline-offset: 0.4rem; */
+}
+
+h1 {
   font-style: bold;
   font-size: 2rem;
   color: indigo;
@@ -19,7 +52,6 @@ h1 {
   color: rgba(47, 0, 85, 0.15);
 }
 h2 {
-  font-family: inter;
   font-style: normal;
   font-size: 1.5rem;
   color: indigo;
@@ -27,7 +59,6 @@ h2 {
 }
 
 h3 {
-  font-family: inter;
   font-style: normal;
   font-size: 1.1rem;
   color: rgb(28, 0, 48);
@@ -35,7 +66,6 @@ h3 {
 }
 
 h4 {
-  font-family: inter;
   font-weight: normal;
   font-size: 0.8rem;
   color: rgb(28, 0, 48);
@@ -51,18 +81,20 @@ h4 {
 
 .subTitle {
   font-variant: small-caps;
+  text-underline-offset: 4px;
 }
 
 div {
   display: flex;
   align-items: flex-start;
-  padding: 0 0 1rem;
+  /* padding: 0 0 1rem; */
   flex-direction: column;
   gap: 0.4rem;
 }
 .flexing {
   display: flex;
   flex-direction: row;
+  gap: 2rem;
 }
 
 .keyProduct {
@@ -81,29 +113,29 @@ div {
   border-radius: 0.25rem;
   font-variant: normal;
   font-size: 0.7rem;
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
 }
 
 p {
-  font-family: inter;
   font-size: 1.1rem;
   margin: 0;
+
+  line-height: 2rem; /* Cambia el valor según el espaciado deseado */
 }
 
 .space {
   display: flex;
   flex-flow: wrap;
+  align-items: center;
   gap: 0.5rem;
   justify-content: flex-start;
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 0;
 }
 
 li {
-  font-family: inter;
-  padding: 0.3rem;
+  padding: 0.3rem 0;
   font-size: 1rem;
-  list-style: disc;
+  list-style: none;
 }
 
 .jobDescription {
@@ -113,4 +145,129 @@ li {
   border-bottom-left-radius: 0.5rem;
 
   padding: 2rem;
+}
+
+#changeId {
+  text-decoration: 0.2em underline;
+  text-underline-offset: 8px;
+}
+
+/* Padding Classes */
+/* Negative Padding (< 1rem or 16px) */
+
+/* 4px */
+.p-4px {
+  padding: 0.25rem;
+}
+
+/* 8px */
+.p-8px {
+  padding: 0.5rem;
+}
+
+/* 12px */
+.p-12px {
+  padding: 0.75rem;
+}
+
+/* 14px */
+.p-14px {
+  padding: 0.875rem;
+}
+
+/* Base Padding (1rem or 16px) */
+
+/* 16px */
+.p-16px {
+  padding: 1rem;
+}
+
+/* Positive Padding (> 1rem or 16px) */
+/* 18px */
+.p-18px {
+  padding: 1.125rem;
+}
+
+/* 20px */
+.p-20px {
+  padding: 1.25rem;
+}
+
+/* 24px */
+.p-24px {
+  padding: 1.5rem;
+}
+
+/* 32px */
+.p-32px {
+  padding: 2rem;
+}
+
+/* 40px */
+.p-40px {
+  padding: 2.5rem;
+}
+
+/* Margin Classes */
+/* Negative Margin (< 1rem or 16px) */
+
+/* 4px */
+.m-4px {
+  margin: 0.25rem;
+}
+
+/* 8px */
+.m-8px {
+  margin: 0.5rem;
+}
+
+/* 12px */
+.m-12px {
+  margin: 0.75rem;
+}
+
+/* 14px */
+.m-14px {
+  margin: 0.875rem;
+}
+
+/* Base Margin (1rem or 16px) */
+/* 16px */
+.m-16px {
+  margin: 1rem;
+}
+
+/* Positive Margin (> 1rem or 16px) */
+
+/* 18px */
+.m-18px {
+  margin: 1.125rem;
+}
+
+/* 20px */
+.m-20px {
+  margin: 1.25rem;
+}
+
+/* 24px */
+.m-24px {
+  margin: 1.5rem;
+}
+
+/* 32px */
+.m-32px {
+  margin: 2rem;
+}
+
+/* 40px */
+.m-40px {
+  margin: 2.5rem;
+}
+
+gap {
+  gap: 1rem;
+}
+
+div > h4.keyProduct {
+  flex-direction: row;
 }
