--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-/* Tokens  */
-:root {
+Tokens :root {
   --lk-color-primary: indigo;
   --lk-color-secondary: #2ecc71;
-  --lk-color-accent-purple: var(
-    --lk-color-primary
-  ); /* Toma el valor de primary */
+  --lk-color-accent-purple: var(--lk-color-primary);
 }
+/* Toma el valor de primary 
+
 
 /* Global selectors */
 * {
@@ -14,15 +13,14 @@
   margin: 0;
   padding: 0;
   /* Asegura que el ancho y alto incluya el padding y border */
-  box-sizing: border-box;
 }
 
 /* Body selector */
 body {
   padding: 3.5rem 3.5rem;
   /* Preservar para colores de bg/surface mas adelante */
-  /* background-color: #1f1f1f;
-  background-color: #515151; */
+  /* background-color: #1f1f 1f; */
+  /* background-color: #515151; */
 }
 
 /* Use it as a tool to map the box model */
@@ -46,252 +44,15 @@ body {
 
 /**/
 
-.card__header {
-  display: flex;
-  flex-direction: row;
-}
-/**/
-
-/**/
-/*
-{
-  color: indigo;
-
-  /* text-decoration: 0.15rem underline;
-  text-underline-offset: 0.4rem; */
-
-h1 {
-  font-style: bold;
-  font-size: 2rem;
-  color: var(--lk-color-accent-purple);
-  margin: 0;
-}
-.translated {
-  font-style: normal;
-
-  font-size: 1.6rem;
-  color: rgba(47, 0, 85, 0.15);
-}
-h2 {
-  font-style: normal;
-  font-size: 1.5rem;
-  color: var(--lk-color-accent-purple);
-  margin: 0;
-}
-
-h3 {
-  font-style: normal;
-  font-size: 1.1rem;
-  color: rgb(28, 0, 48);
-  margin: 0;
-}
-
-h4 {
-  font-weight: normal;
-  font-size: 0.8rem;
-  color: rgb(28, 0, 48);
-  margin: 0;
-  font-style: small-caps;
-}
-.separator {
-  color: #e5e7eb;
-}
-.industryType {
-  font-variant: small-caps;
-}
-
-.subTitle {
-  font-variant: small-caps;
-  text-underline-offset: 4px;
-}
-
-div {
-  display: flex;
-  align-items: flex-start;
-  /* padding: 0 0 1rem; */
-  flex-direction: column;
-  gap: 0.4rem;
-}
-
-.keyProduct {
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
-  padding: 0.1rem 0.2rem 0;
-  border-radius: 0.25rem;
-  font-variant: uppercase;
-  font-size: 0.7rem;
-  font-weight: bold;
-  padding: 0.25rem;
-}
-.tags {
-  color: rgb(240, 240, 240);
-  background-color: rgb(37, 37, 37);
-  padding: 0.2rem 0.4rem 0;
-  border-radius: 0.25rem;
-  font-variant: normal;
-  font-size: 0.7rem;
-  font-weight: normal;
-}
-
-p {
-  font-size: 1.1rem;
-  margin: 0;
-
-  line-height: 2rem; /* Cambia el valor según el espaciado deseado */
-}
-
-.space {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  justify-content: flex-start;
-  padding: 1rem 0 1rem 0;
-  line-height: 1;
-}
-.flexing {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: flex-start;
-  flex-direction: row;
-  gap: 0.5rem;
-}
-
-ul {
-  padding-left: 1rem; /* Ajusta este valor según sea necesario */
-  list-style-position: inside; /* Opcional: mueve las viñetas dentro del área de contenido del contenedor */
-}
-li {
-  padding: 0.5rem 0 0.5rem 0.3rem;
-  font-size: 1rem;
-  list-style: disc;
-}
-
-.jobDescription {
-  border-width: 0.2rem;
-  border-left: 4px solid black;
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-
-  padding: 2rem;
-}
-
-#changeId {
-  text-decoration: 0.2em underline;
-  text-underline-offset: 8px;
-}
-
-/* Padding Classes */
-/* Negative Padding (< 1rem or 16px) */
-
-/* 4px */
-.p-4px {
-  padding: 0.25rem;
-}
-
-/* 8px */
-.p-8px {
-  padding: 0.5rem;
-}
-
-/* 12px */
-.p-12px {
-  padding: 0.75rem;
-}
-
-/* 14px */
-.p-14px {
-  padding: 0.875rem;
-}
-
-/* Base Padding (1rem or 16px) */
-
-/* 16px */
-.p-16px {
-  padding: 1rem;
-}
-
-/* Positive Padding (> 1rem or 16px) */
-/* 18px */
-.p-18px {
-  padding: 1.125rem;
-}
-
-/* 20px */
-.p-20px {
-  padding: 1.25rem;
-}
-
-/* 24px */
-.p-24px {
-  padding: 1.5rem;
-}
-
-/* 32px */
-.p-32px {
-  padding: 2rem;
-}
-
-/* 40px */
-.p-40px {
-  padding: 2.5rem;
-}
-
-/* Margin Classes */
-/* Negative Margin (< 1rem or 16px) */
-
-/* 4px */
-.m-4px {
-  margin: 0.25rem;
-}
-
-/* 8px */
-.m-8px {
-  margin: 0.5rem;
-}
-
-/* 12px */
-.m-12px {
-  margin: 0.75rem;
-}
-
-/* 14px */
-.m-14px {
-  margin: 0.875rem;
-}
-
-/* Base Margin (1rem or 16px) */
-/* 16px */
-.m-16px {
-  margin: 1rem;
-}
-
-/* Positive Margin (> 1rem or 16px) */
-
-/* 18px */
-.m-18px {
-  margin: 1.125rem;
-}
-
-/* 20px */
-.m-20px {
-  margin: 1.25rem;
-}
-
-/* 24px */
-.m-24px {
-  margin: 1.5rem;
-}
-
-/* 32px */
-.m-32px {
-  margin: 2rem;
-}
-
-/* 40px */
-.m-40px {
-  margin: 2.5rem;
-}
-
-gap {
-  gap: 1rem;
+.card {
+  &__header {
+    background-color: red;
+  }
+  &__title {
+    background-color: red;
+    font-style: normal;
+    font-size: 1.5rem;
+    color: var(--lk-color-accent-purple);
+    margin: 0;
+  }
 }
