--- a/lenk__design-system.css
+++ b/lenk__design-system.css
@@ -1,12 +1,43 @@
 /* Tokens */
 
+/* NAME CONVENCION
+- NAMESPACE (lk): Esto indica que los tokens vienen del design system "LK".
+- LEVEL:
+- - - CORE: Nivel básico, que almacena valores sin contexto.
+- - - GLOBAL: Tokens aplicables en toda la interfaz y vinculados a estilos generales, como colores y sombras base.
+- - - COMPONENT: Tokens aplicados a componentes específicos, como button.
+- PROPERTY (color, font-size, etc.): Indica el tipo de atributo que define el token, como color o espaciado.
+- MODIFIER (active, hover, disabled): Indica el estado o variante, que puede adaptarse según las necesidades.
+Usar esta convención facilita identificar los roles y jerarquías de cada token y ayuda a la escalabilidad y claridad del sistema de diseño. */
+
 :root {
   /* PRIMARY Color --- Used to hightlight thinks */
-  --lk-color-primary-500: #5b21b6;
-  --lk-color-primary-100: #ede9fe;
+
+  /* PURPLE color */
+  --lk-color-purple-05: hsl(270, 100%, 97%);
+  --lk-color-purple-10: hsl(245, 94%, 92%);
+  --lk-color-purple-20: hsl(270, 100%, 87%);
+  --lk-color-purple-30: hsl(270, 100%, 80%);
+  --lk-color-purple-40: hsl(260, 81%, 70%);
+  --lk-color-purple-50: hsl(270, 50%, 53%);
+  --lk-color-purple-60: hsl(270, 54%, 40%);
+  --lk-color-purple-70: hsl(270, 61%, 29%);
+  --lk-color-purple-80: hsl(270, 69%, 18%);
+
+  /* GREEN color */
+  --lk-color-green-10: hsl(163, 100%, 94%); /* #ECFFF8 */
+  --lk-color-green-20: hsl(158, 100%, 85%); /* #B5FFE5 */
+  --lk-color-green-30: hsl(158, 100%, 77%); /* #7EFFD2 */
+  --lk-color-green-40: hsl(158, 100%, 69%); /* #47FFBF */
+  --lk-color-green-50: hsl(165, 67%, 52%); /* #2FD69C */
+  --lk-color-green-60: hsl(165, 72%, 39%); /* #1CAD7B */
+  --lk-color-green-70: hsl(165, 78%, 28%); /* #0E855B */
+  --lk-color-green-80: hsl(165, 87%, 19%); /* #045C3D */
+  --lk-color-green-90: hsl(120, 6%, 3%); /* #060A08 */
+  --lk-color-green-100: hsl(150, 9%, 9%); /* #121716 */
 
   /* SECONDARY Color --- Used to hightlight thinks */
-  --lk-color-secondary-500: #2ecc71;
+  --lk-core-color-green-500: #2ecc71;
 
   /* NEUTRAL Color --- Used to hightlight thinks */
   --lk-color-neutral: rgb(250, 250, 250);
