--- a/style.css
+++ b/style.css
@@ -45,29 +45,21 @@ li {
   text-underline-offset: var(--lk-size-4px);
 }
 
-/* .grid-item1 {
-  display: flex;
-  flex-direction: row;
-  gap: var(--lk-fontsize-32px);
-  background-color: red;
-  grid-row: 1 / 3;
-  grid-column: 2 / 4;
+.the-grid {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+
+  gap: var(--lk-size-16px);
 }
+/* .grid-item1 {
+  background-color: azure;
+} */
+/* 
 .grid-item2 {
-  background-color: red;
-  grid-row: 1 / 3;
-  grid-column: 2 / 4;
+  background-color: rgb(255, 230, 230);
 }
 .grid-item3 {
-  background-color: red;
-  grid-row: 1 / 3;
-  grid-column: 2 / 4;
-}
-.grid {
-  background-color: blanchedalmond;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  background-color: rgb(248, 240, 255);
 } */
 
 /* WRAPPER TITLE */
@@ -79,6 +71,9 @@ li {
   gap: var(--lk-size-40px);
   align-items: top;
 }
+
+/* .main-description__title-wrapper {
+} */
 
 .main-description__title {
   color: var(--lk-theforce-primary);
@@ -104,7 +99,7 @@ li {
 /* WRAPPER - JOB EXPERIENCE */
 .job-experience-wrapper {
   display: flex;
-  flex-wrap: ;
+  /* flex-wrap: ; */
   gap: var(--lk-size-40px);
 }
 
@@ -139,11 +134,10 @@ li {
   font-style: normal;
   font-size: var(--lk-fontsize-24px);
   color: var(--lk-theforce-primary);
-
   margin: 0;
 }
-/* BUSINESS SIZE & MODEL */
 
+/* BUSINESS SIZE & MODEL */
 /* BUSINESS INFO */
 
 .card-exp__industry-and-duration-wrapper {
@@ -180,10 +174,23 @@ li {
   font-weight: 600;
 }
 
+/* WRAPPER SKILL SET */
+.skill-set__wrapper {
+  border-radius: var(--lk-size-8px);
+  background-color: var(--lk-theforce-surface-container-05);
+  padding: var(--lk-size-24px);
+  color: var(--lk-theforce-onSurface-container-05);
+}
+
+.skill-set__title {
+  font-weight: 700;
+  /* padding-top: var(--lk-fontsize-24px); */
+}
+
 /*  */
 /*  */
 /* Use it as a tool to map the box model */
-.ruler-p {
+.X {
   border: purple;
   background-color: rgba(255, 0, 0, 0.079);
   background-image: radial-gradient(
