--- a/style.css
+++ b/style.css
@@ -2,13 +2,35 @@
 body {
   padding: var(--lk-size-40px) var(--lk-size-40px); /* Preservar para colores de bg/surface mas adelante */ /* background-color: #1f1f1f; */ /* background-color: #515151; */
 }
-
+/* LIST */
 ul {
   list-style-position: inside;
 }
 li {
   padding: var(--lk-size-8px) var(--lk-size-0px);
+
+  text-indent: -22px;
+  padding-left: 22px;
 }
+/* LINK */
+a {
+  color: var(--lk-theforce-primary);
+}
+a:visited {
+  color: yellow;
+}
+a:focus {
+  color: red;
+}
+a:active {
+  color: aqua;
+}
+
+/* CONTAINER */
+/* #downloadcv { */
+/* width: 1440px; Evitar divisiones de página */
+/* page-break-inside: avoid; Usa esta propiedad para prevenir cortes no deseados en el PDF:
+} */
 
 /* HIGHLEVEL COMPONENT */
 /* TAGS */
@@ -18,6 +40,8 @@ li {
   background-color: var(--lk-base-color-neutral-90);
   color: var(--lk-theforce-white);
   font-size: var(--lk-fontsize-12px);
+  width: fit-content;
+  height: fit-content;
 }
 
 .tag--primary {
@@ -25,6 +49,7 @@ li {
   color: var(--lk-theforce-onPrimary-inv);
 }
 .tag--secondary {
+  display: inline;
   background-color: var(--lk-theforce-gray);
   color: var(--lk-theforce-black);
   font-size: var(--lk-fontsize-8px);
@@ -33,21 +58,36 @@ li {
 .card-exp__prod-keywords-wrapper {
   display: flex;
   gap: var(--lk-size-8px);
+  /* flex-wrap: wrap; */
+  width: fit-content;
+  align-items: stretch;
+}
+.card-exp__prod-built-wrapper {
+  display: flex;
+  padding-top: var(--lk-size-2px);
+  gap: var(--lk-size-8px);
+  flex-direction: row;
   flex-wrap: wrap;
 }
 
+/* .card-exp__prod-built {
+} */
+
 .card-exp__summary {
   font-weight: 600;
+  padding-top: var(--lk-size-16px);
 }
 .card-exp__prod-keywords {
   font-variant-caps: all-small-caps;
   text-decoration-line: underline;
   text-underline-offset: var(--lk-size-4px);
+  flex-direction: row;
 }
 
-.the-grid {
+/* GRID */
+.main-column {
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 3fr 1fr;
 
   gap: var(--lk-size-16px);
 }
@@ -63,6 +103,11 @@ li {
   align-items: top;
   align-content: flex-start;
 }
+
+/* MAIN DESCRIPTION WRAPPER - OBJECT#1 */
+
+/* .main-description-wrapper {
+} */
 
 /* .main-description__title-wrapper {
   background-color: red;
@@ -86,17 +131,47 @@ li {
   gap: var(--lk-size-24px);
   padding-top: var(--lk-size-8px);
 }
+/* CONTACT WRAPPER - OBJECT#2 */
+
+/* .main-description__contact-wrapper {
+} */
+
+.main-description__contact-header-wrapper {
+  padding-bottom: var(--lk-size-16px);
+}
+
+.main-description__portfolio-items-wrapper {
+  display: flex;
+  gap: var(--lk-size-8px);
+  padding-top: var(--lk-size-8px);
+}
 .main-description__contact-link {
-  text-decoration: underline;
+  padding-bottom: var(--lk-size-8px);
+  list-style: none;
+}
+
+.main-description__contact-link__inline {
+  display: inline;
+}
+
+/* WRAPPER - SECTION JOB EXPERIENCE - OBJECT#3 */
+.section-wrapper-job-experience {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  grid-auto-flow: dense; /* Intenta llenar los huecos */
+  gap: var(--lk-size-24px);
+  background-color: rgb(234, 246, 227);
 }
 /* WRAPPER - JOB EXPERIENCE */
 .job-experience-wrapper {
-  display: flex;
-  /* flex-wrap: ; */
-  gap: var(--lk-size-40px);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--lk-size-24px);
 }
 
 /* CARD - JOB EXPERIENCE */
+
 .card-exp {
   display: flex;
   flex-direction: column;
@@ -105,12 +180,14 @@ li {
     var(--lk-size-24px);
   background-color: var(--lk-theforce-surface-container);
   border-radius: var(--lk-size-8px);
+  height: fit-content;
 
   /* LEFT BORDER */
   /* REMINDER: I have 2 borders because I dont know how to add just the left padding */
   border: 0;
   border-left: var(--lk-size-4px);
   border-style: solid;
+  height: ;
 }
 
 /* TITLE ROLE */
@@ -157,41 +234,58 @@ li {
 }
 
 .card-exp__company-ending-date {
+  font-variant-caps: all-small-caps;
+}
+.card-exp__company-ending-date--present {
+  font-size: var(--lk-fontsize-18px);
+  font-weight: 600;
   text-underline-offset: var(--lk-size-4px);
   text-decoration: underline;
   font-size: var(--lk-fontsize-18px);
   font-style: 10px;
 }
-.card-exp__company-ending-date--present {
-  font-size: var(--lk-fontsize-18px);
-  font-weight: 600;
-}
 
-/* WRAPPER SKILL SET */
+/* WRAPPER SKILL SET - OBJECT#4 */
 .skill-set__wrapper {
+  display: inline-block;
+  padding: var(--lk-size-24px) var(--lk-size-24px) 0 var(--lk-size-24px);
+  height: fit-content;
   border-radius: var(--lk-size-8px);
-  background-color: var(--lk-theforce-surface-container-05);
-  padding: var(--lk-size-24px);
   color: var(--lk-theforce-onSurface-container-05);
   background-color: var(--lk-theforce-surface-container-05);
+
+  /* REMOVE THIS BG AFTER ALINGMENTS */
 }
 
 .skill-set__title {
   font-weight: 600;
   color: var(--lk-base-color-purple-10);
+  padding-bottom: var(--lk-size-8px);
   /* font-style: italic; */
   font-variant: all-small-caps;
   /* padding-top: var(--lk-fontsize-24px); */
 }
 
 .skill-set__section {
-  padding: 0 0 var(--lk-size-24px) 0;
+  padding-bottom: var(--lk-size-32px);
 }
 
+.skill-set__sub-section {
+  padding-bottom: var(--lk-size-20px);
+}
+
+.skill-set__subtitle {
+  padding-top: var(--lk-size-8px);
+  padding-bottom: var(--lk-size-4px);
+  color: var(--lk-theforce-onSurface-container-05);
+  font-weight: 600;
+  font-variant: all-small-caps;
+  font-size: medium;
+}
 /*  */
 /*  */
 /* Use it as a tool to map the box model */
-.X {
+.XX {
   border: purple;
   background-color: rgba(255, 0, 0, 0.079);
   background-image: radial-gradient(
