--- a/lenk__design-system.css
+++ b/lenk__design-system.css
@@ -114,7 +114,8 @@ Usar esta convención facilita identificar los roles y jerarquías de cada token
 * {
   background-color: none;
 
-  font-family: inter;
+  font-family: arial;
+  /* inter; */
   /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-family: Arial, Helvetica, sans-serif;
   font-family: "Times New Roman", Times, serif; */
