--- a/style.css
+++ b/style.css
@@ -150,8 +150,8 @@ a:active {
 .main-description__contact-wrapper {
   display: flex;
   flex-direction: column;
-  padding-top: var(--lk-fontsize-8px);
-  padding-left: var(--lk-fontsize-20px);
+  padding-top: var(--lk-size-8px);
+  padding-left: var(--lk-size-8px);
   gap: var(--lk-size-20px);
   height: auto;
 }
